--- a/htmls/style.css
+++ b/htmls/style.css
@@ -1,20 +1,68 @@
-.navbar{
+body {
+    margin: 0;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    background-color: #181818;
+    flex-direction: column;
 }
-.navbar.navitem{
-    background: burlywood;
-    width: 5rem;
-    height: 5rem;
+h1 {
+    font-size: 4em;
+    color: #36d9ca;
+    margin: 0;
+}
+.logo {
+    margin-top: 20px; 
+    width: 200px; 
+    height: auto; 
+    background-image: url('/logo/logo_light_200.png'); 
+    background-size: contain; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    transition: background-image 0.2s cubic-bezier(0, 1.49, 1, -0.52);
+}
+.logo:hover{
+    background-image: url('/logo/logo.png'); 
 }
 
-main{
-    display: flex;
-    background: #181818;
+
+
+.tmp body {
+         margin: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column; 
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff; 
+            color: #333; 
+            text-align: center; 
 }
-section:before{
-    content: "->";
+.tmp h1 {
+     font-size: 3em;
+            color: #36d9ca; 
+            margin: 0;
+            }
+.tmp p {
+    color: pink;
+     font-size: 1.5em;
+            margin: 10px 0; 
 }
-footer{
-    background: #1c1cff;
+.tmp .dumb-status {
+      font-weight: bold; 
+            color: #cb876d; 
+}
+
+
+.about p, ul {
+    color: wheat; 
+    font-size: 1.2em;
+    margin: 10px 0; 
+}
+.about ul {
+    list-style-type: disc; 
+    padding-left: 20px; 
 }
